--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -13,3 +13,10 @@
   background-color: gray;
   color: darkgray;
 }
+.searchResult{
+  left:-120px;
+  border-radius: 10px;
+  width:400px;
+  max-height: 300px;
+  min-height:50px;
+}
