--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,29 +1,35 @@
 <div class="row">
   <div class="col col-xs-8 d-flex align-items-center ps-0 ">
-      <h2>Fitness Stovix</h2>
+    <h2>Fitness Stovix</h2>
   </div>
   <div class="col col-xs-4 d-flex align-items-center justify-content-end pe-0">
     <mat-icon>search</mat-icon>
-    <div class="position-relative">
-      <input (focus)="onFocus()" (blur)="onOutOfFocus()" [formControl]="searchForm" placeholder="Search" class="me-4 search-input border-light" type="text"/>
-      <div *ngIf="users!==undefined" class="searchResult overflow-auto mt-1 p-2 border position-absolute bg-white">
-        <p  *ngIf="users.length===0">No results found</p>
-        <div *ngFor="let user of users" class="mb-2">
-            <div class="d-flex align-items-center">
-              <img [src]="user.image" width="50" height="50" class="rounded-circle"/>
-              <span class="ps-2">{{user.name+' '+user.surname}}</span>
-            </div>
-        </div>
+    <div class="position-relative" (focusout)="onOutOfFocus()" tabindex="1">
+      <input (focusin)="onFocus()" [formControl]="searchForm" placeholder="Search"
+             class="me-4 search-input border-light" type="text"/>
+      <div (mouseleave)="onMouseLeaveSearch()" (mouseover)="onMouseOverSearch()"  *ngIf="users!==undefined" class="searchResult overflow-auto mt-1 p-2 border position-absolute bg-white">
+        <p *ngIf="users.length===0">No results found</p>
+        <a  routerLink='/profile/{{user.id}}/posts' *ngFor="let user of users" class="mb-2">
+          <div class="d-flex align-items-center">
+            <img [src]="user.image" width="50" height="50" class="rounded-circle"/>
+            <span class="ps-2">{{user.name + ' ' + user.surname}}</span>
+          </div>
+        </a>
       </div>
     </div>
-    <a routerLink="/"><mat-icon class="home-icon me-3">home</mat-icon></a>
+    <a routerLink="/">
+      <mat-icon class="home-icon me-3">home</mat-icon>
+    </a>
     <div class="dropdown profile-image">
-      <img alt="Profile image" src="/assets/images/face.jpg" class="dropdown-toggle rounded-circle img-fluid" data-bs-toggle="dropdown"
+      <img alt="Profile image" src="/assets/images/face.jpg" class="dropdown-toggle rounded-circle img-fluid"
+           data-bs-toggle="dropdown"
            aria-expanded="false"/>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <li><a class="dropdown-item" routerLink="/profile/posts">My Profile</a></li>
+        <li><a class="dropdown-item" routerLink="/profile/{{myId}}/posts">My Profile</a></li>
         <li><a class="dropdown-item" routerLink="/edit-profile">Edit Profile</a></li>
-        <li><button class="dropdown-item" (click)="onLogOut()" >Log out</button></li>
+        <li>
+          <button class="dropdown-item" (click)="onLogOut()">Log out</button>
+        </li>
       </ul>
     </div>
   </div>
