--- a/src/app/components/side-section/side-section.component.html
+++ b/src/app/components/side-section/side-section.component.html
@@ -5,7 +5,7 @@
   </div>
   <h3 *ngIf="user!=undefined" class="mb-0">{{user.name+' '+user.surname}}</h3>
   <p class="mb-0">1200 followers</p>
-  <button class="mt-2 follow-btn btn btn-info">Follow</button>
+  <button [ngClass]="user?.followedBy ? 'user-followed' : ''" (click)="followOrUnfollowUser(user?.id!!)" class="mt-2 follow-btn btn btn-info" >Follow</button>
   <span class="border-top mt-3 w-100"></span>
   <p *ngIf="user!=undefined" class="mt-1 p-2 text-justify">{{user.description}}</p>
   <span class="border-top mt-0 mb-3 w-100"></span>
