img fixed at side section and header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,7 +21,7 @@
       <mat-icon class="home-icon me-3">home</mat-icon>
     </a>
     <div class="dropdown profile-image">
-      <img  alt="Profile image" [src]="currentUser!=undefined ? currentUser.image : '/assets/images/profile-icon.png'" class="w-100 h-100 dropdown-toggle rounded-circle img-fluid"
+      <img  alt="Profile image" src="{{currentUser!=undefined && currentUser.image!=null ? currentUser.image : '/assets/images/profile-icon.png'}}" class="w-100 h-100 dropdown-toggle rounded-circle img-fluid"
            data-bs-toggle="dropdown"
            aria-expanded="false"/>
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
