follow service plus started workout program implementation

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -19,9 +19,9 @@
       </div>
     </div>
     <a routerLink="/">
-      <mat-icon class="home-icon me-3">home</mat-icon>
+      <mat-icon class="home-icon me-3 mt-1">home</mat-icon>
     </a>
-    <div class="dropdown profile-image">
+    <div class="dropdown profile-image mb-1">
       <img alt="Profile image"
            src="{{currentUser!=undefined && currentUser.image!=null ? currentUser.image : '/assets/images/profile-icon.png'}}"
            class="w-100 h-100 dropdown-toggle rounded-circle img-fluid"
