--- a/src/app/components/authenticated/authenticated.component.html
+++ b/src/app/components/authenticated/authenticated.component.html
@@ -10,7 +10,7 @@
     </div>
     <div class="col col-md-4 side-section bg-white border rounded">
       <div class="d-flex justify-content-center ">
-        <div class="position-fixed fixed-content-side-section">
+        <div class="position-fixed fixed-content-side-section h-100">
           <app-side-section></app-side-section>
         </div>
       </div>
