--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <hr class="mb-2 mt-2">
-  <img alt="Post image" class="rounded-3 mt-2 post-image" [src]="post?.image"/>
+  <img alt="Post image" class="mt-2 post-image" [src]="post?.image"/>
   <div class="d-flex mt-2 flex-column justify-content-between">
     <div class="d-flex p-2 justify-content-between">
       <div class="d-flex">
