--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col col-xs-8 d-flex align-items-center ps-0 ">
-    <h2>Fitness Stovix</h2>
+    <a routerLink="/"><img src="/assets/images/muscled.png" width="90"></a>
   </div>
   <div class="col col-xs-4 d-flex align-items-center justify-content-end pe-0">
     <mat-icon>search</mat-icon>
@@ -12,7 +12,7 @@
         <p *ngIf="users.length===0">No results found</p>
         <a routerLink='/profile/{{user.id}}/posts' *ngFor="let user of users">
           <div class="d-flex align-items-center mt-2 mb-2">
-            <img [src]="user.image" width="50" height="50" class="border rounded-circle"/>
+            <img src="{{user.image!=null ? user.image : '/assets/images/profile-icon.png'}}" width="50" height="50" class="border rounded-circle"/>
             <span class="ps-2">{{user.name + ' ' + user.surname}}</span>
           </div>
         </a>
