--- a/src/app/components/profile-workout-programs/profile-workout-programs.component.html
+++ b/src/app/components/profile-workout-programs/profile-workout-programs.component.html
@@ -1,7 +1,8 @@
-<div class="d-flex justify-content-center">
-  <a class="me-2 h4" routerLink="/profile/posts">Posts</a>
-  <a class="ms-2 h4" routerLink="/profile/workout-programs">Workout Programs</a>
-</div>
+<div class="d-flex flex-column justify-content-center">
+  <div class="d-flex justify-content-center bg-white pt-2 align-items-center mb-3">
+    <a class="me-2 h4" routerLink="/profile/{{user?.id}}/posts">Posts</a>
+    <a class="ms-2 h4" routerLink="/profile/{{user?.id}}/workout-programs">Workout Programs</a>
+  </div>
 <div class="mt-3">
   <div class="d-flex flex-column rounded-3 position-relative bg-white">
     <!-- target na ovie a treba da bide /profile/profile_id/workout-programs/workout_program_id-->
