--- a/src/app/components/side-section/side-section.component.html
+++ b/src/app/components/side-section/side-section.component.html
@@ -1,13 +1,26 @@
-<div class="mt-2 d-flex flex-column align-items-center bg-white">
+<div class="mt-2 d-flex flex-column align-items-center bg-white h-100">
   <img class="rounded-circle" width="160" height="160" src="{{user!=undefined && user.image!=null ? user.image : '/assets/images/profile-icon.png'}}">
   <div class="mt-2">
     &#11088;&#11088;&#11088;
   </div>
   <h3 *ngIf="user!=undefined" class="mb-0">{{user.name+' '+user.surname}}</h3>
-  <p class="mb-0">1200 followers</p>
-  <button [ngClass]="user?.followedBy ? 'user-followed' : ''" (click)="followOrUnfollowUser(user?.id!!)" class="mt-2 follow-btn btn btn-info" >Follow</button>
+  <div class="d-flex justify-content-between justify-content-around w-100">
+    <div class="d-flex flex-column align-items-center">
+      <span><strong>Following</strong></span>
+      <span class="mb-0">{{user?.followingNum!=0 ? user?.followingNum : 0}}</span>
+    </div>
+    <div class="d-flex flex-column align-items-center">
+      <span><strong>Followers</strong></span>
+      <span class="mb-0">{{user?.followersNum!=0 ? user?.followersNum : 0}}</span>
+    </div>
+  </div>
+  <div *ngIf="isDifferentUser()">
+    <button [ngClass]="user?.followedBy ? 'user-followed' : ''" (click)="followOrUnfollowUser(user?.id!!)" class="mt-2 follow-btn  " >
+      {{user?.followedBy ? 'Unfollow' : 'Follow'}}
+    </button>
+  </div>
   <span class="border-top mt-3 w-100"></span>
-  <p *ngIf="user!=undefined" class="mt-1 p-2 text-justify">{{user.description}}</p>
+  <p *ngIf="user!=undefined" class="mt-1 p-2 text-justify">{{user.description.length!=0 ? user.description : 'No description available'}}</p>
   <span class="border-top mt-0 mb-3 w-100"></span>
 
 </div>
