--- a/src/app/components/edit-workout-program/edit-workout-program.component.html
+++ b/src/app/components/edit-workout-program/edit-workout-program.component.html
@@ -1,6 +1,6 @@
-<div class="d-flex justify-content-center align-items-center row">
+<div class="d-flex justify-content-center align-items-center row bg-white border rounded">
   <div class="d-flex flex-column col-12">
-    <div class="bg-white p-5">
+    <div class=" p-4">
       <h1 class="text-center ">Edit Workout Program</h1>
       <div class="mt-5">
         <div class="div-holders mt-2 ">
@@ -8,8 +8,12 @@
           <input class="form form-control" type="text" placeholder="Name"/>
         </div>
         <div class="div-holders mt-2">
+          <span class="holders">Price</span>
+          <input class="form form-control" type="number" placeholder="Price">
+        </div>
+        <div class="div-holders mt-2">
           <span class="holders">Description</span>
-          <textarea class="form form-control" type="text" placeholder="Description"></textarea>
+          <input class="form form-control" type="text" placeholder="Description">
         </div>
         <div class="div-holders mt-2 ">
           <span class="holders">Weeks</span>
