--- a/src/app/components/profile-posts/profile-posts.component.html
+++ b/src/app/components/profile-posts/profile-posts.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column justify-content-center">
-  <div class="d-flex justify-content-center bg-white pt-2 align-items-center mb-3">
+  <div class="d-flex justify-content-center bg-white pt-2 align-items-center mb-3 border rounded">
     <a class="me-2 h4" routerLink="/profile/{{user?.id}}/posts">Posts</a>
     <a class="ms-2 h4" routerLink="/profile/workout-programs">Workout Programs</a>
   </div>
