--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,8 +7,22 @@
       <h1 class="text-center text-white display-3">Fitness Stovix</h1>
       <div class="mt-3" >
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-          <input class="form form-control" formControlName="email" type="text" placeholder="Email" />
-          <input class="mt-3 form form-control" formControlName="password" type="password" placeholder="Password" />
+<!--          <input class="form form-control" formControlName="email" type="text" placeholder="Email" />-->
+<!--          <input class="mt-3 form form-control" formControlName="password" type="password" placeholder="Password" />-->
+          <div >
+            <mat-form-field appearance="fill" class="bg-white w-100 border rounded">
+              <mat-label>Enter your email</mat-label>
+              <input matInput placeholder="stovix@sorsix.com" formControlName="email" required>
+            </mat-form-field>
+          </div>
+          <div>
+            <mat-form-field appearance="fill" class="mt-3 bg-white border rounded">
+              <mat-label>Enter your password</mat-label>
+              <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
+              <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" >
+                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon></button>
+            </mat-form-field>
+          </div>
           <div class="d-flex justify-content-center">
             <button class="w-100 mt-4 btn btn-outline-light">Log in</button>
           </div>
