--- a/src/app/components/profile-workout-programs/profile-workout-programs.component.html
+++ b/src/app/components/profile-workout-programs/profile-workout-programs.component.html
@@ -1,18 +1,20 @@
-<div class="d-flex flex-column justify-content-center">
-  <div class="d-flex justify-content-center bg-white pt-2 align-items-center mb-3">
+<div class="d-flex flex-column justify-content-center ">
+  <div class="d-flex justify-content-center bg-white pt-2 align-items-center mb-2 border rounded">
     <a class="me-2 h4" routerLink="/profile/{{user?.id}}/posts">Posts</a>
     <a class="ms-2 h4" routerLink="/profile/{{user?.id}}/workout-programs">Workout Programs</a>
   </div>
-<div class="mt-3">
-  <div class="d-flex flex-column rounded-3 position-relative bg-white">
-    <!-- target na ovie a treba da bide /profile/profile_id/workout-programs/workout_program_id-->
-    <a class="d-flex flex-column m-2 linkovi " id="selektirano">Workout program1 name</a>
-    <a class="d-flex flex-column m-2 linkovi">Workout program2 name</a>
-    <a class="d-flex flex-column m-2 linkovi">Workout program3 name</a>
-  </div>
-  <hr>
-  <div class="d-flex flex-column rounded-3 position-relative mt-2  bg-white">
-    <app-workout-program></app-workout-program>
+  <div class="mt-2">
+    <div class="d-flex flex-column rounded-3 position-relative bg-white border rounded">
+      <!-- target na ovie a treba da bide /profile/profile_id/workout-programs/workout_program_id-->
+      <a class="d-flex flex-column m-2 linkovi " id="selektirano">Workout program1 name</a>
+      <a class="d-flex flex-column m-2 linkovi">Workout program2 name</a>
+      <a class="d-flex flex-column m-2 linkovi">Workout program3 name</a>
+      <button class="btn btn-primary m-2 w-25" routerLink="/workout-programs/create">Create New</button>
+    </div>
+    <hr>
+    <div class="d-flex flex-column rounded-3 position-relative mt-2">
+      <app-workout-program></app-workout-program>
 
+    </div>
   </div>
 </div>
