--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,18 +1,47 @@
 <div class="login d-flex justify-content-center align-items-center">
   <div class="login-section d-flex flex-column">
-    <div class="mb-4">
-      <img src="/assets/images/muscled.png" class="img-fluid">
-    </div>
+<!--    <div class="mb-4">-->
+<!--      <img src="/assets/images/muscled.png" class="img-fluid">-->
+<!--    </div>-->
     <div class="bg-secondary p-4 border-light rounded-3">
       <h1 class="text-center text-white display-3 ">Fitness Stovix</h1>
       <div class="mt-3">
         <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
-          <input class="mt-2 form form-control" formControlName="name" type="text" placeholder="Name"/>
-          <input class="mt-2 form form-control" formControlName="surname" type="text" placeholder="Surname"/>
-          <input class="mt-2 form form-control" formControlName="email" type="text" placeholder="Email"/>
-          <input class="mt-2 form form-control" formControlName="password" type="password" placeholder="Password"/>
-          <input class="mt-2 form form-control" formControlName="confirmPassword" type="password"
-                 placeholder="Confirm Password"/>
+
+<!--          <input class="mt-2 form form-control" formControlName="name" type="text" placeholder="Name"/>-->
+<!--          <input class="mt-2 form form-control" formControlName="surname" type="text" placeholder="Surname"/>-->
+<!--          <input class="mt-2 form form-control" formControlName="email" type="text" placeholder="Email"/>-->
+<!--          <input class="mt-2 form form-control" formControlName="password" type="password" placeholder="Password"/>-->
+<!--          <input class="mt-2 form form-control" formControlName="confirmPassword" type="password" placeholder="Confirm Password"/>-->
+
+          <mat-form-field appearance="fill" class="mt-2 w-100 bg-white border rounded" >
+            <mat-label>Name</mat-label>
+            <input matInput formControlName="name" required>
+          </mat-form-field>
+          <br>
+          <mat-form-field appearance="fill" class="mt-2 w-100 bg-white border rounded" >
+            <mat-label>Surname</mat-label>
+            <input matInput formControlName="surname" required>
+          </mat-form-field>
+          <br>
+          <mat-form-field appearance="fill" class="mt-2 bg-white w-100 border rounded">
+            <mat-label>Enter your email</mat-label>
+            <input matInput placeholder="stovix@sorsix.com" formControlName="email" required>
+          </mat-form-field>
+          <br>
+          <mat-form-field appearance="fill" class="mt-2 w-100 bg-white border rounded">
+            <mat-label>Enter your password</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" required>
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" >
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon></button>
+          </mat-form-field>
+          <br>
+          <mat-form-field appearance="fill" class="mt-2 w-100 bg-white border rounded">
+            <mat-label>Confirm your password</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" formControlName="confirmPassword" required>
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide" >
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon></button>
+          </mat-form-field>
 
           <div class="d-flex justify-content-between mt-3">
             <div class="d-flex align-items-center">
