--- a/src/app/components/workout-program/workout-program.component.html
+++ b/src/app/components/workout-program/workout-program.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column rounded-3 position-relative bg-white">
+<div class="d-flex flex-column rounded-3 position-relative bg-white border rounded">
   <div>
     <!-- Name -->
     <div class="div-holders mt-2 ms-2">
@@ -8,6 +8,11 @@
     <!-- Trainer -->
     <div class="div-holders mt-3 ms-2">
       <span class="holders">WK1 Trainer</span>
+    </div>
+
+    <!-- Price -->
+    <div class="div-holders mt-3 ms-2">
+      <span class="holders">WK1 Price</span>
     </div>
 
     <!-- Description -->
@@ -35,6 +40,9 @@
       </div>
       <div class="d-flex ms-2">
         <button class="btn btn-danger">Delete</button>
+      </div>
+      <div class="d-flex ms-2">
+        <button class="btn btn-success">Buy</button>
       </div>
     </div>
   </div>
