added BMI calculator

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -30,9 +30,8 @@
       <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
         <li><a class="dropdown-item" routerLink="/profile/{{myId}}/posts">My Profile</a></li>
         <li><a class="dropdown-item" routerLink="/edit-profile">Edit Profile</a></li>
-        <li>
-          <button class="dropdown-item" (click)="onLogOut()">Log out</button>
-        </li>
+        <li><a class="dropdown-item" routerLink="/bmi">BMI calculator</a></li>
+        <li><button class="dropdown-item" (click)="onLogOut()">Log out</button></li>
       </ul>
     </div>
   </div>
