--- a/src/app/components/side-section/side-section.component.html
+++ b/src/app/components/side-section/side-section.component.html
@@ -1,4 +1,4 @@
-<div class="mt-2 d-flex flex-column align-items-center bg-white h-100">
+<div class="d-flex flex-column align-items-center bg-white border rounded h-100">
   <img class="rounded-circle" width="160" height="160" src="{{user!=undefined && user.image!=null ? user.image : '/assets/images/profile-icon.png'}}">
   <div class="mt-2">
     &#11088;&#11088;&#11088;
