--- a/src/app/components/create-workout-program/create-workout-program.component.html
+++ b/src/app/components/create-workout-program/create-workout-program.component.html
@@ -25,12 +25,12 @@
                  placeholder="Number Of Weeks"/>
         </div>
         <div class="d-flex flex-column mt-3" *ngIf="numberOfWeeks != 0">
-          <div *ngFor="let week of numSequence(numberOfWeeks);">
+          <div *ngFor="let week of numSequence(numberOfWeeks);let i=index">
             <div>
               <h2>Week {{week}}</h2>
               <div formArrayName="days">
                 <div *ngFor="let day of numSequence(7);let j=index;">
-                  <div [formGroupName]="j">
+                  <div [formGroupName]="i*7+j">
                     <h2 [ngClass]="day==1 ? '' : 'mt-4'" class="text-center mb-0">Day {{day}}</h2>
                     <div class="div-holders ">
                       <span class="holders">Name</span>
