--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col col-xs-8 d-flex align-items-center ps-0 ">
+  <div class="col col-xs-8 d-flex align-items-center ps-0 ms-1 ">
     <a routerLink="/"><img src="/assets/images/muscled.png" width="90"></a>
   </div>
   <div class="col col-xs-4 d-flex align-items-center justify-content-end pe-0">
-    <mat-icon>search</mat-icon>
+    <mat-icon class="search-icon">search</mat-icon>
     <div class="position-relative" (focusout)="onOutOfFocus()" tabindex="1">
       <input (focusin)="onFocus()" [formControl]="searchForm" placeholder="Search"
              class="me-4 search-input border-light" type="text"/>
@@ -12,7 +12,8 @@
         <p *ngIf="users.length===0">No results found</p>
         <a routerLink='/profile/{{user.id}}/posts' *ngFor="let user of users">
           <div class="d-flex align-items-center mt-2 mb-2">
-            <img src="{{user.image!=null ? user.image : '/assets/images/profile-icon.png'}}" width="50" height="50" class="border rounded-circle"/>
+            <img src="{{user.image!=null ? user.image : '/assets/images/profile-icon.png'}}" width="50" height="50"
+                 class="border rounded-circle"/>
             <span class="ps-2">{{user.name + ' ' + user.surname}}</span>
           </div>
         </a>
@@ -21,7 +22,7 @@
     <a routerLink="/">
       <mat-icon class="home-icon me-3 mt-1">home</mat-icon>
     </a>
-    <div class="dropdown profile-image mb-1">
+    <div class="dropdown profile-image me-1">
       <img alt="Profile image"
            src="{{currentUser!=undefined && currentUser.image!=null ? currentUser.image : '/assets/images/profile-icon.png'}}"
            class="w-100 h-100 dropdown-toggle rounded-circle img-fluid"
@@ -31,10 +32,30 @@
         <li><a class="dropdown-item" routerLink="/profile/{{myId}}/posts">My Profile</a></li>
         <li><a class="dropdown-item" routerLink="/edit-profile">Edit Profile</a></li>
         <li><a class="dropdown-item" routerLink="/bmi">BMI calculator</a></li>
-        <li><button class="dropdown-item" (click)="onLogOut()">Log out</button></li>
+        <li>
+          <div class="position-relative" (focusout)="onOutOfFocus()" tabindex="1">
+            <input (focusin)="onFocus()" [formControl]="searchForm" placeholder="Search"
+                   class="ms-3 me-4 search-input-dropdown border-light" type="text"/>
+            <div (mouseleave)="onMouseLeaveSearch()" (mouseover)="onMouseOverSearch()" *ngIf="users!==undefined"
+                 class="searchResult overflow-auto mt-1 p-2 border position-absolute bg-white">
+              <p *ngIf="users.length===0">No results found</p>
+              <a routerLink='/profile/{{user.id}}/posts' *ngFor="let user of users">
+                <div class="d-flex align-items-center mt-2 mb-2">
+                  <img src="{{user.image!=null ? user.image : '/assets/images/profile-icon.png'}}" width="50"
+                       height="50" class="border rounded-circle"/>
+                  <span class="ps-2">{{user.name + ' ' + user.surname}}</span>
+                </div>
+              </a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <button class="dropdown-item" (click)="onLogOut()">Log out</button>
+        </li>
       </ul>
     </div>
   </div>
+
 </div>
 
 
