--- a/src/app/components/create-workout-program/create-workout-program.component.html
+++ b/src/app/components/create-workout-program/create-workout-program.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center align-items-center row">
+<div class="d-flex justify-content-center align-items-center row bg-white border rounded">
   <div class="d-flex flex-column col-12">
     <div class="bg-white p-5">
       <h1 class="text-center ">Create Workout Program</h1>
