--- a/src/app/components/profile-workout-programs/profile-workout-programs.component.html
+++ b/src/app/components/profile-workout-programs/profile-workout-programs.component.html
@@ -5,8 +5,12 @@
   </div>
   <div class="mt-2">
     <div class="d-flex flex-column rounded-3 position-relative bg-white border rounded">
-      <a *ngFor="let workoutProgram of workoutPrograms" class="d-flex flex-column m-2 linkovi">{{workoutProgram.name}}</a>
-      <button *ngIf="user?.role=='TRAINER' && user?.id==myProfile?.id" class="btn btn-primary m-2 w-25" routerLink="/workout-programs/create">
+      <h2 *ngFor="let workoutProgram of workoutPrograms" (click)="selectedWorkoutProgram=workoutProgram"
+         class="d-flex flex-column m-2 cursor-pointer"
+         [ngClass]="selectedWorkoutProgram==workoutProgram ? 'selected-workout-program' : ''"
+      >{{workoutProgram.name}}</h2>
+      <button *ngIf="user?.role=='TRAINER' && user?.id==myProfile?.id" class="btn btn-primary m-2 w-25"
+              routerLink="/workout-programs/create">
         Create New
       </button>
     </div>
