--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -28,7 +28,9 @@ h1, h2, h3, h4, h5, h6 {
 a {
   color: black;
 }
-
+.cursor-pointer{
+  cursor: pointer;
+}
 a:hover {
   color: rgba(51, 51, 51, 0.48);
 }
