--- a/src/app/components/edit-workout-program/edit-workout-program.component.html
+++ b/src/app/components/edit-workout-program/edit-workout-program.component.html
@@ -1,54 +1,66 @@
-<div class="d-flex justify-content-center align-items-center row bg-white border rounded">
+<div class="d-flex justify-content-center align-items-center row">
   <div class="d-flex flex-column col-12">
-    <div class=" p-4">
-      <h1 class="text-center ">Edit Workout Program</h1>
-      <div class="mt-5">
+    <div class="bg-white p-5">
+      <h1 class="text-center ">Create Workout Program</h1>
+
+      <form [formGroup]="workoutProgramForm" (ngSubmit)="onSubmit()" class="mt-5">
+
         <div class="div-holders mt-2 ">
           <span class="holders">Name</span>
-          <input class="form form-control" type="text" placeholder="Name"/>
-        </div>
-        <div class="div-holders mt-2">
-          <span class="holders">Price</span>
-          <input class="form form-control" type="number" placeholder="Price">
+          <input [value]="workoutProgram?.name" formControlName="name" class="form form-control" type="text" placeholder="Name"/>
         </div>
         <div class="div-holders mt-2">
           <span class="holders">Description</span>
-          <input class="form form-control" type="text" placeholder="Description">
+          <textarea [value]="workoutProgram?.description" formControlName="description" class="form form-control" type="text"
+                    placeholder="Description"></textarea>
+        </div>
+        <div class="div-holders mt-2">
+          <span class="holders">Price</span>
+          <input [value]="workoutProgram?.price" formControlName="price" class="form form-control" type="number"
+                    placeholder="Description" />
         </div>
         <div class="div-holders mt-2 ">
           <span class="holders">Weeks</span>
-          <input [(ngModel)]="numberOfWeeks" class="form form-control" type="number" min="0"
+          <input  (keyup)="numberOfWeeksChange($event)" class="form form-control" type="number" min="0"
                  placeholder="Number Of Weeks"/>
         </div>
         <div class="d-flex flex-column mt-3" *ngIf="numberOfWeeks != 0">
-          <div *ngFor="let week of numSequence(numberOfWeeks)">
-            <h2>Week {{week}}</h2>
-            <div *ngFor="let day of numSequence(7)">
-              <h2 [ngClass]="day==1 ? '' : 'mt-4'" class="text-center mb-0">Day {{day}}</h2>
-              <div class="div-holders ">
-                <span class="holders">Name</span>
-                <input class="form form-control" type="text" placeholder="Name"/>
+          <div *ngFor="let week of numSequence(numberOfWeeks);let i=index">
+            <div>
+              <h2>Week {{week}}</h2>
+              <div formArrayName="days">
+                <div *ngFor="let day of numSequence(7);let j=index;">
+                  <div [formGroupName]="i*7+j">
+                    <h2 [ngClass]="day==1 ? '' : 'mt-4'" class="text-center mb-0">Day {{day}}</h2>
+                    <div class="div-holders ">
+                      <span class="holders">Name</span>
+                      <input formControlName="title" class="form form-control" type="text" placeholder="Name"/>
+                    </div>
+                    <div class="div-holders mt-2">
+                      <span class="holders">Description</span>
+                      <input formControlName="description" class="form form-control" type="text"
+                             placeholder="Description"/>
+                    </div>
+                    <div class="div-holders mt-2">
+                      <span class="holders">Video</span>
+                      <input formControlName="video" class="form form-control" type="text"
+                             placeholder="Video Link"/>
+                    </div>
+                  </div>
+                </div>
               </div>
-              <div class="div-holders mt-2">
-                <span class="holders">Description</span>
-                <input class="form form-control" type="text" placeholder="Description"/>
-              </div>
-              <div class="div-holders mt-2">
-                <span class="holders">Video</span>
-                <input class="form form-control" type="text" placeholder="Video Link"/>
-              </div>
+              <div class="mt-3 mb-2 divider"></div>
             </div>
-            <div class="mt-3 mb-2 divider"></div>
           </div>
         </div>
         <div class="buttons-group row">
           <div class="col- ">
             <div class="d-flex justify-content-center ">
-              <button class="mt-4 btn btn-secondary">Save changes</button>
+              <button class="mt-4 btn btn-primary save-button">Create</button>
             </div>
           </div>
         </div>
-      </div>
+      </form>
     </div>
   </div>
 </div>
