--- a/src/app/components/edit-profile/edit-profile.component.html
+++ b/src/app/components/edit-profile/edit-profile.component.html
@@ -26,7 +26,9 @@
           </div>
           <div class="div-holders mt-2 ">
             <mat-icon matTooltip="Enter description for yourself">description</mat-icon>
-            <input formControlName="description" class="form form-control" type="text" placeholder="{{user?.description != null || user?.description != '' ? user?.description : 'Description'}}">
+            <textarea formControlName="description" class="form form-control" type="text"
+                      placeholder="{{user?.description != null || user?.description != '' ? user?.description : 'Description'}}">
+            </textarea>
           </div>
           <div class="bottom row mt-5">
             <div class="image col-md-6 col-sm-12">
