--- a/src/app/components/profile-workout-programs/profile-workout-programs.component.html
+++ b/src/app/components/profile-workout-programs/profile-workout-programs.component.html
@@ -7,8 +7,7 @@
     <div class="d-flex flex-column rounded-3 position-relative bg-white border rounded">
       <h2 *ngFor="let workoutProgram of workoutPrograms" (click)="selectedWorkoutProgram=workoutProgram"
          class="d-flex flex-column m-2 cursor-pointer"
-         [ngClass]="selectedWorkoutProgram==workoutProgram ? 'selected-workout-program' : ''"
-      >{{workoutProgram.name}}</h2>
+         [ngClass]="selectedWorkoutProgram==workoutProgram ? 'selected-workout-program' : ''">{{workoutProgram.name}}</h2>
       <button *ngIf="user?.role=='TRAINER' && user?.id==myProfile?.id" class="btn btn-primary m-2 w-25"
               routerLink="/workout-programs/create">
         Create New
@@ -16,7 +15,11 @@
     </div>
     <hr>
     <div class="d-flex flex-column rounded-3 position-relative mt-2">
-      <app-workout-program [workoutProgram]="selectedWorkoutProgram"></app-workout-program>
+      <app-workout-program
+        [workoutProgram]="selectedWorkoutProgram"
+        [myProfile]="myProfile"
+        [user]="user">
+      </app-workout-program>
     </div>
   </div>
 </div>
