--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -4,3 +4,6 @@
 .post-liked{
   filter: invert(48%) sepia(77%) saturate(3207%) hue-rotate(320deg) brightness(95%) contrast(80%);
 }
+.ramka {
+  border-right: 5px solid black;
+}
