--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -4,10 +4,12 @@
       <div class="profile-image">
         <img alt="Profile image" class="w-100 h-100 rounded-circle img-fluid" src="{{post?.user?.image !=null ? post?.user?.image : '/assets/images/profile-icon.png'  }}"/>
       </div>
-      <span class="ms-2">{{post?.user?.name + ' ' + post?.user?.surname}}</span>
+      <a routerLink="/profile/{{post?.user?.id}}/posts"><span class="ms-2">{{post?.user?.name + ' ' + post?.user?.surname}}</span></a>
     </div>
-    <div *ngIf="post?.user?.role?.toString()=='TRAINER'">
-      &#11088;&#11088;Fitness Instructor
+    <div *ngIf="post!.user!.role =='TRAINER'">
+      <span *ngFor="let star of starsByUser()">
+        <span>&#11088;</span>
+      </span>
     </div>
   </div>
   <hr class="mb-2 mt-2">
@@ -25,6 +27,12 @@
     </div>
     <div class="p-2">
       <p>{{post?.description}}</p>
+    </div>
+    <div>
+      <div class="d-flex ms-2">
+        <button *ngIf="user?.role=='TRAINER' && user?.id==myProfile?.id"
+                class="btn btn-danger" (click)="deletePost(post?.id)">Delete</button>
+      </div>
     </div>
   </div>
 </div>
