--- a/src/app/components/create-workout-program/create-workout-program.component.html
+++ b/src/app/components/create-workout-program/create-workout-program.component.html
@@ -24,33 +24,44 @@
           <input (keyup)="numberOfWeeksChange($event)" class="form form-control" onwheel="this.blur()" type="number" min="0"
                  placeholder="Number Of Weeks"/>
         </div>
+
         <div class="d-flex flex-column mt-3" *ngIf="numberOfWeeks != 0">
           <div *ngFor="let week of numSequence(numberOfWeeks);let i=index">
-            <div>
-              <h2>Week {{week}}</h2>
+            <mat-expansion-panel hideToggle>
+              <mat-expansion-panel-header class="panel-hover">
+                <mat-panel-title>
+                  <h2>Week {{week}}</h2>
+                </mat-panel-title>
+              </mat-expansion-panel-header>
               <div formArrayName="days">
                 <div *ngFor="let day of numSequence(7); let j=index;">
                   <div [formGroupName]="i*7+j">
-                    <h2 [ngClass]="day==1 ? '' : 'mt-4'" class="text-center mb-0">Day {{day}}</h2>
-                    <div class="div-holders ">
-                      <span class="holders">Name</span>
-                      <input formControlName="title" class="form form-control" type="text" placeholder="Name"/>
-                    </div>
-                    <div class="div-holders mt-2">
-                      <span class="holders">Description</span>
-                      <input formControlName="description" class="form form-control" type="text"
-                             placeholder="Description"/>
-                    </div>
-                    <div class="div-holders mt-2">
-                      <span class="holders">Video</span>
-                      <input formControlName="video" class="form form-control" type="text"
-                             placeholder="Video Link"/>
-                    </div>
+                    <mat-expansion-panel hideToggle class="mt-4">
+                      <mat-expansion-panel-header class="panel-hover">
+                        <mat-panel-title>
+                          <h2 class="text-center mb-0">Day {{day}}</h2>
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <div class="div-holders ">
+                        <span class="holders">Name</span>
+                        <input formControlName="title" class="form form-control" type="text" placeholder="Name"/>
+                      </div>
+                      <div class="div-holders mt-2">
+                        <span class="holders">Description</span>
+                        <input formControlName="description" class="form form-control" type="text"
+                               placeholder="Description"/>
+                      </div>
+                      <div class="div-holders mt-2">
+                        <span class="holders">Video</span>
+                        <input formControlName="video" class="form form-control" type="text"
+                               placeholder="Video Link"/>
+                      </div>
+                    </mat-expansion-panel>
                   </div>
                 </div>
               </div>
-              <div class="mt-3 mb-2 divider"></div>
-            </div>
+            </mat-expansion-panel>
+            <div class="mt-3 mb-2 divider"></div>
           </div>
         </div>
         <div class="buttons-group row">
